syntax = "proto2";

message User {
    optional string user_name = 1;
    optional string email = 2;
    optional string password_sha256 = 3;
}